tests/macros/editor/mask.stderr
error: option `mask` does not exist for kind `editor`
 --> $DIR/mask.rs:2:44
  |
2 |     let q = requestty::questions![Editor { mask: todo!() }];
  |                                            ^^^^
