tests/macros/editor/mask.rs
fn main() {
    let q = requestty::questions![Editor { mask: todo!() }];
}
